#fix/#12-footer-boton-contacto Hago que el footer solo sea visible de no estar logueado, si esta logueado el boton de contacto esta en el menu, de paso corrijo el formulario de contacto solo se cierra si se hace click en la X y se acepta el aviso de sweet alert

--- a/src/components/template/header/Header.css
+++ b/src/components/template/header/Header.css
@@ -8,6 +8,7 @@ header {
   color: var(--color-secondary);
   margin-bottom: 0.75rem;
   font-weight: 700;
+  width: 160px;
 }
 
 .user-menu:hover {
@@ -21,12 +22,18 @@ header {
   -o-border-radius: 7px;
 } 
 
+/* El bonton de contacto */
+.btn-contact {
+  width: 160px;
+  margin: 12px 0px;
+}
 /* El boton de salir*/
 .user-menu-btn {
   color: var(--color-secondary);
   background-color: var(--color-primary);
   border: none;
   font-weight: 700;
+  width: 160px;
 }
 
 .user-menu-btn:hover {
